--- a/index.html
+++ b/index.html
@@ -96,38 +96,47 @@
 
   <!-- Skills Section -->
   <section id="skills" class="skills section">
-  <div class="container">
-    <h2 class="section-title">Skills & Expertise</h2>
-
-    <div class="accordion">
-      <!-- Accordion Item 1 -->
-      <div class="accordion-item">
-        <button class="accordion-header">Data Analysis</button>
-        <div class="accordion-content">
-          <ul>
-            <li><span class="skill-name">Statistical Analysis</span> <span class="tag expert">Expert</span></li>
-            <li><span class="skill-name">Data Cleaning & Preprocessing</span> <span class="tag advanced">Advanced</span></li>
-            <li><span class="skill-name">Exploratory Data Analysis</span> <span class="tag expert">Expert</span></li>
-            <li><span class="skill-name">A/B Testing</span> <span class="tag proficient">Proficient</span></li>
-          </ul>
+    <div class="container">
+      <h2 class="section-title">Skills & Expertise</h2>
+      <div class="accordion">
+        <div class="accordion-item">
+          <button class="accordion-header">Data Analysis</button>
+          <div class="accordion-content">
+            <ul>
+              <li><span class="skill-name">Statistical Analysis</span> <span class="tag expert">Expert</span></li>
+              <li><span class="skill-name">Data Cleaning & Preprocessing</span> <span class="tag advanced">Advanced</span></li>
+              <li><span class="skill-name">Exploratory Data Analysis</span> <span class="tag expert">Expert</span></li>
+              <li><span class="skill-name">A/B Testing</span> <span class="tag proficient">Proficient</span></li>
+              <li><span class="skill-name">Dashborading and Reporting</span> <span class="tag expert">Expert</span></li>
+            </ul>
+          </div>
         </div>
-      </div>
-
-      <!-- Accordion Item 2 -->
-      <div class="accordion-item">
-        <button class="accordion-header">Machine Learning</button>
-        <div class="accordion-content">
-          <ul>
-            <li><span class="skill-name">Supervised Learning</span> <span class="tag expert">Expert</span></li>
-            <li><span class="skill-name">Unsupervised Learning</span> <span class="tag expert">Expert</span></li>
-            <li><span class="skill-name">Deep Learning</span> <span class="tag advanced">Advanced</span></li>
-            <li><span class="skill-name">Natural Language Processing</span> <span class="tag advanced">Advanced</span></li>
-          </ul>
+        <div class="accordion-item">
+          <button class="accordion-header">Machine Learning</button>
+          <div class="accordion-content">
+            <ul>
+              <li><span class="skill-name">Supervised Learning</span> <span class="tag expert">Expert</span></li>
+              <li><span class="skill-name">Unsupervised Learning</span> <span class="tag expert">Expert</span></li>
+              <li><span class="skill-name">Deep Learning</span> <span class="tag advanced">Advanced</span></li>
+              <li><span class="skill-name">Image Processing</span> <span class="tag expert">Expert</span></li>
+              <li><span class="skill-name">Natural Language Processing</span> <span class="tag advanced">Advanced</span></li>
+            </ul>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-header">Cloud Operations</button>
+          <div class="accordion-content">
+            <ul>
+              <li><span class="skill-name">Docker and Containerization</span> <span class="tag proficient">Proficient</span></li>
+              <li><span class="skill-name">CI/CD with GitHub actions</span> <span class="tag proficient">Proficient</span></li>
+              <li><span class="skill-name">Cloud Monitoring</span> <span class="tag advanced">Advanced</span></li>
+              <li><span class="skill-name">Cloud Resource Management</span> <span class="tag advanced">Advanced</span></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
   <!-- Tools & Technologies Section -->
