--- a/index.html
+++ b/index.html
@@ -186,12 +186,6 @@
   <section id="projects" class="projects section">
     <div class="container">
       <h2 class="section-title">Featured Projects</h2>
-      <div class="project-filters">
-        <button class="filter-btn active" data-filter="all">All</button>
-        <button class="filter-btn" data-filter="machine-learning">Machine Learning</button>
-        <button class="filter-btn" data-filter="data-viz">Data Visualization</button>
-        <button class="filter-btn" data-filter="analysis">Data Analysis</button>
-      </div>
       <div class="projects-grid">
         <!-- Project 1 -->
         <div class="project-card" data-category="machine-learning">
@@ -199,19 +193,16 @@
             <img src="https://images.pexels.com/photos/7567434/pexels-photo-7567434.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Machine Learning Project" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">Predictive Customer Churn Model</h3>
+            <h3 class="project-title">News Notifier</h3>
             <p class="project-description">
               Developed a machine learning model to predict customer churn with 92% accuracy, enabling proactive retention strategies.
             </p>
             <div class="project-tags">
               <span class="tag">Python</span>
-              <span class="tag">Scikit-learn</span>
-              <span class="tag">Random Forest</span>
+              <span class="tag">Transformers and Clustering (UMAP)</span>
+              <span class="tag">Airflow</span>
             </div>
             <div class="project-links">
-              <a href="#" class="project-link">
-                <i class="fas fa-eye"></i> View Case Study
-              </a>
               <a href="#" class="project-link">
                 <i class="fab fa-github"></i> Code
               </a>
@@ -230,7 +221,7 @@
               Built an interactive dashboard visualizing sales performance across regions, products, and time periods.
             </p>
             <div class="project-tags">
-              <span class="tag">Tableau</span>
+              <span class="tag">PowerBI</span>
               <span class="tag">SQL</span>
               <span class="tag">Data Visualization</span>
             </div>
@@ -251,18 +242,18 @@
             <img src="https://images.pexels.com/photos/7947359/pexels-photo-7947359.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Data Analysis Project" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">Market Basket Analysis</h3>
+            <h3 class="project-title">Personalized Cafe And Restaurant Recommendation System</h3>
             <p class="project-description">
               Performed association rule mining on transaction data to identify product affinities and optimize store layouts.
             </p>
             <div class="project-tags">
-              <span class="tag">R</span>
-              <span class="tag">Association Rules</span>
-              <span class="tag">Data Mining</span>
+              <span class="tag">Google BigQuery</span>
+              <span class="tag">RAG</span>
+              <span class="tag">ChromaDB and OpenAI API</span>
             </div>
             <div class="project-links">
               <a href="#" class="project-link">
-                <i class="fas fa-eye"></i> View Study
+                <i class="fas fa-eye"></i> View Report
               </a>
               <a href="#" class="project-link">
                 <i class="fab fa-github"></i> Code
@@ -277,18 +268,18 @@
             <img src="https://images.pexels.com/photos/5473337/pexels-photo-5473337.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="NLP Project" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">Sentiment Analysis Engine</h3>
+            <h3 class="project-title">Asthama Predictor</h3>
             <p class="project-description">
               Created an NLP model to analyze customer reviews and social media mentions, extracting sentiment and key themes.
             </p>
             <div class="project-tags">
-              <span class="tag">NLP</span>
-              <span class="tag">BERT</span>
-              <span class="tag">Python</span>
+              <span class="tag">R</span>
+              <span class="tag">Data Preprocessing</span>
+              <span class="tag">Machine Learning</span>
             </div>
             <div class="project-links">
               <a href="#" class="project-link">
-                <i class="fas fa-eye"></i> View Demo
+                <i class="fas fa-eye"></i> View Report
               </a>
               <a href="#" class="project-link">
                 <i class="fab fa-github"></i> Repository
@@ -303,19 +294,16 @@
             <img src="https://images.pexels.com/photos/590041/pexels-photo-590041.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Data Visualization Project" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">COVID-19 Impact Analysis</h3>
+            <h3 class="project-title">Predicting ESG Risks using Flood detection</h3>
             <p class="project-description">
               Analyzed and visualized COVID-19 data to understand socioeconomic impacts across different regions and demographics.
             </p>
             <div class="project-tags">
-              <span class="tag">D3.js</span>
+              <span class="tag">Deep Learning</span>
               <span class="tag">Python</span>
               <span class="tag">Geospatial Analysis</span>
             </div>
             <div class="project-links">
-              <a href="#" class="project-link">
-                <i class="fas fa-eye"></i> View Visualization
-              </a>
               <a href="#" class="project-link">
                 <i class="fas fa-file-pdf"></i> Research Paper
               </a>
