--- a/index.html
+++ b/index.html
@@ -317,19 +317,16 @@
             <img src="https://images.pexels.com/photos/6801648/pexels-photo-6801648.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Time Series Analysis Project" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">Time Series Forecasting</h3>
+            <h3 class="project-title">Wound Detection And Segmentation</h3>
             <p class="project-description">
               Implemented ARIMA and Prophet models to forecast sales and inventory needs, reducing stockouts by 35%.
             </p>
             <div class="project-tags">
-              <span class="tag">Time Series</span>
-              <span class="tag">Prophet</span>
-              <span class="tag">Forecasting</span>
+              <span class="tag">Image Processing</span>
+              <span class="tag">Google Deeplab V3</span>
+              <span class="tag">Apache Kafka</span>
             </div>
             <div class="project-links">
-              <a href="#" class="project-link">
-                <i class="fas fa-eye"></i> View Case Study
-              </a>
               <a href="#" class="project-link">
                 <i class="fab fa-github"></i> Code
               </a>
