added project descriptions

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="project-info">
             <h3 class="project-title">News Notifier</h3>
             <p class="project-description">
-              Developed a machine learning model to predict customer churn with 92% accuracy, enabling proactive retention strategies.
+              Detects and visualizes trending news topics by clustering semantically similar articles. Uses MiniLM for embeddings, Facebook BART for summarization, and UMAP for dimensionality reduction.
             </p>
             <div class="project-tags">
               <span class="tag">Python</span>
@@ -203,7 +203,7 @@
               <span class="tag">Airflow</span>
             </div>
             <div class="project-links">
-              <a href="#" class="project-link">
+              <a href="https://github.com/yash722/news-trend-detector" class="project-link">
                 <i class="fab fa-github"></i> Code
               </a>
             </div>
@@ -216,22 +216,14 @@
             <img src="https://images.pexels.com/photos/186464/pexels-photo-186464.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Data Visualization Project" />
           </div>
           <div class="project-info">
-            <h3 class="project-title">Interactive Sales Dashboard</h3>
+            <h3 class="project-title">HR Attrition Dashboard</h3>
             <p class="project-description">
-              Built an interactive dashboard visualizing sales performance across regions, products, and time periods.
+              Built an interactive Power BI dashboard to analyze employee attrition across roles, age groups, education, salary, and experience. Identified key drivers of attrition including low salary (under $5K), age group 26–35, and job roles like Laboratory Technician and Sales Executive. Enabled HR teams to make data-driven retention strategies.
             </p>
             <div class="project-tags">
               <span class="tag">PowerBI</span>
               <span class="tag">SQL</span>
               <span class="tag">Data Visualization</span>
-            </div>
-            <div class="project-links">
-              <a href="#" class="project-link">
-                <i class="fas fa-eye"></i> View Dashboard
-              </a>
-              <a href="#" class="project-link">
-                <i class="fas fa-file-alt"></i> Report
-              </a>
             </div>
           </div>
         </div>
@@ -270,7 +262,7 @@
           <div class="project-info">
             <h3 class="project-title">Asthama Predictor</h3>
             <p class="project-description">
-              Created an NLP model to analyze customer reviews and social media mentions, extracting sentiment and key themes.
+              Developed a machine learning pipeline to predict asthma risk based on patient demographic and clinical data. Performed extensive preprocessing, feature selection (Boruta, LDA, Random Forest), and balanced the dataset using undersampling techniques. Evaluated models like XGBoost, SVM, and AdaBoost using AUC and MCC for reliable classification.
             </p>
             <div class="project-tags">
               <span class="tag">R</span>
@@ -278,10 +270,7 @@
               <span class="tag">Machine Learning</span>
             </div>
             <div class="project-links">
-              <a href="#" class="project-link">
-                <i class="fas fa-eye"></i> View Report
-              </a>
-              <a href="#" class="project-link">
+              <a href="https://github.com/yash722/AsthamaPrediction" class="project-link">
                 <i class="fab fa-github"></i> Repository
               </a>
             </div>
@@ -289,14 +278,14 @@
         </div>
         
         <!-- Project 5 -->
-        <div class="project-card" data-category="data-viz">
+        <div class="project-card" data-category="machine-learning">
           <div class="project-image">
             <img src="https://images.pexels.com/photos/590041/pexels-photo-590041.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Data Visualization Project" />
           </div>
           <div class="project-info">
             <h3 class="project-title">Predicting ESG Risks using Flood detection</h3>
             <p class="project-description">
-              Analyzed and visualized COVID-19 data to understand socioeconomic impacts across different regions and demographics.
+              Published a report to highlight the ESG risks of floods in flood prone areas using Satellite Imagery, Geospatial Analysis and Deep Learning.
             </p>
             <div class="project-tags">
               <span class="tag">Deep Learning</span>
@@ -319,7 +308,7 @@
           <div class="project-info">
             <h3 class="project-title">Wound Detection And Segmentation</h3>
             <p class="project-description">
-              Implemented ARIMA and Prophet models to forecast sales and inventory needs, reducing stockouts by 35%.
+              Built an end-to-end wound analysis system using a fine-tuned DeepLabv3 model for segmentation. Integrated real-time image processing via Apache Kafka and Flask API. Supports RGB input and outputs segmentation masks for clinical assessment
             </p>
             <div class="project-tags">
               <span class="tag">Image Processing</span>
@@ -327,7 +316,7 @@
               <span class="tag">Apache Kafka</span>
             </div>
             <div class="project-links">
-              <a href="#" class="project-link">
+              <a href="https://github.com/yash722/WoundDetectionAndSegmentation" class="project-link">
                 <i class="fab fa-github"></i> Code
               </a>
             </div>
