--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       <div class="nav-links">
         <a href="#about" class="nav-link">About</a>
         <a href="#skills" class="nav-link">Skills</a>
+        <a href="#tools-tech" class="nav-link">Tools</a>
         <a href="#projects" class="nav-link">Projects</a>
-        <a href="#experience" class="nav-link">Experience</a>
+        <a href="#timeline" class="nav-link">Experience</a>
+        <a href="#certifications" class="nav-link">Certifications</a>
         <a href="#contact" class="nav-link">Contact</a>
       </div>
       <button class="theme-toggle" aria-label="Toggle dark/light mode">
@@ -190,7 +192,7 @@
         <!-- Project 1 -->
         <div class="project-card" data-category="machine-learning">
           <div class="project-image">
-            <img src="https://images.pexels.com/photos/7567434/pexels-photo-7567434.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Machine Learning Project" />
+            <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Machine Learning Project" />
           </div>
           <div class="project-info">
             <h3 class="project-title">News Notifier</h3>
@@ -213,7 +215,7 @@
         <!-- Project 2 -->
         <div class="project-card" data-category="data-viz">
           <div class="project-image">
-            <img src="https://images.pexels.com/photos/186464/pexels-photo-186464.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Data Visualization Project" />
+            <img src="https://images.pexels.com/photos/6693654/pexels-photo-6693654.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Data Visualization Project" />
           </div>
           <div class="project-info">
             <h3 class="project-title">HR Attrition Dashboard</h3>
@@ -257,7 +259,7 @@
         <!-- Project 4 -->
         <div class="project-card" data-category="machine-learning">
           <div class="project-image">
-            <img src="https://images.pexels.com/photos/5473337/pexels-photo-5473337.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="NLP Project" />
+            <img src="https://images.pexels.com/photos/3845125/pexels-photo-3845125.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="NLP Project" />
           </div>
           <div class="project-info">
             <h3 class="project-title">Asthama Predictor</h3>
@@ -303,7 +305,7 @@
         <!-- Project 6 -->
         <div class="project-card" data-category="analysis">
           <div class="project-image">
-            <img src="https://images.pexels.com/photos/6801648/pexels-photo-6801648.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Time Series Analysis Project" />
+            <img src="https://images.pexels.com/photos/3845126/pexels-photo-3845126.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Time Series Analysis Project" />
           </div>
           <div class="project-info">
             <h3 class="project-title">Wound Detection And Segmentation</h3>
